--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">fdsafdsa fdsa</a></li>
+                        <li><a href="#">Mahesh Is  A beast</a></li>
                         <li><a href="#">nav ul li a</a></li>
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
