--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
-
+        
+        <p>Hello! I'm Christopher</p>
+        
         <div class="header-container">
             <header class="wrapper clearfix">
                 <h1 class="title">h1.title</h1>
