--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <article>
                     <header>
                         <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+                        <p> Fuck Latin words. </p>
+                        <p> Fuck Latin words. </p>
+                        <p> Fuck Latin words. </p>
                     </header>
                     <section>
                         <h2>article section h2</h2>
