--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+
+git status
+
+git add -A
+git commit -m "mymessage"
+
+git pull origin
+
+git push
+
+-->
+
 <!DOCTYPE html>
 <html class="no-js">
     <head>
@@ -20,7 +33,7 @@
                 <nav>
                     <ul>
                         <li><a href="#">Mahesh Is  A beast</a></li>
-                        <li><a href="#">Hi I'm Bunny</a></li>
+                        <li><a href="#"><strong>Bunny Powa!</strong></a></a></li>
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
                 </nav>
