--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ git push
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Mahesh Is  A beast</a></li>
+                        <li><a href="#">Neil Palleti Is  A beast</a></li>
                         <li><a href="#"><strong>Bunny Powa!</strong></a></a></li>
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
