--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@ git push
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
-<<<<<<< HEAD
-                        <li><a href="#">Neil Palleti Is  A beast</a></li>
-                        <li><a href="#"><strong>Bunny Powa!</strong></a></a></li>
-=======
-                        <li><a href="#">Neil Is  fdsafsda A beast</a></li>
-                        <li><a href="http://images4.fanpop.com/image/photos/16400000/Bunnies-bunny-rabbits-16437969-1280-800.jpg"><strong>Bunny Powa!</strong></a></a></li>
->>>>>>> f8dbffb14b2959188f6a6f323b9f04474a7bafd5
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Apply as Tutor</a></li>
+                        <li><a href="#">How it Works</a></li>
+                        <li><a href="#">Why Education</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Sign In</a></li>
                     </ul>
                 </nav>
             </header>
